CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.17

	- The scheduler now allows accounts authenticated via
	  PAM to not have a corresponding UNIX account, but
	  group membership still requires the account name to be
	  listed in the UNIX group file(s)...
	- The scheduler used a fixed-size (16k) buffer for
	  encoding job options for filters; it now dynamically
	  allocates and expands the buffer as needed depending
	  on the options that are sent in a job.
	- The pdftops filter didn't support all of the MacOS
	  characters for MacRoman encoded fonts.
	- The cupsEncodeOptions() and cupsParseOptions()
	  functions now conform to the grammer defined by the
	  current draft of the PAPI specification.  The main
	  difference is that option=yes and option=no are no
	  longer treated as boolean options.
	- The IPP backend didn't honor the encryption settings
	  in /etc/cups/client.conf.
	- Fixed a potential bug in the HTTP code which was
	  caused by servers sending the status line and
	  newline(s) in separate packets.
	- User-defined classification strings are now printed
	  verbatim - previously the classification box would be
	  empty.
	- Re-added Spanish to the list of PPD languages that
	  CUPS supports.
	- CUPS API library user and temp file updates for
	  Windows.
	- The image filters did not properly handle grayscale
	  printing of Sun Raster images.
	- The scheduler never reset the NumJobs variable before
	  loading the job list (previously this only happened on
	  a full start, so the problem was never apparent...)
	- The HTTP and IPP read/write code didn't handle EINTR
	  (interrupted system call) errors.
	- When under high load, the scheduler could abort due to
	  the wrong errno value after a select() call.  This was
	  caused by the child signal handler.
	- Added new load tests to the test target to verify that
	  cupsd can handle hundreds of simultaneous jobs without
	  error.
	- The Solaris USB backend now supports the new device
	  URI syntax.