@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.29 2002/10/16 02:35:31 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.30 2002/11/21 21:46:58 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -4542,14 +4542,20 @@ read_ps_job_ticket(client_t *con)	/* I - Client connection */
       * Some other value; first free the old value...
       */
 
-      for (prev2 = con->request->attrs; prev2 != NULL; prev2 = prev2->next)
-	if (prev2->next == attr2)
-	  break;
-
-      if (prev2)
-	prev2->next = attr2->next;
-      else
+      if (con->request->attrs == attr2)
 	con->request->attrs = attr2->next;
+      else
+      {
+	for (prev2 = con->request->attrs; prev2 != NULL; prev2 = prev2->next)
+	  if (prev2->next == attr2)
+	  {
+	    prev2->next = attr2->next;
+	    break;
+	  }
+      }
+
+      if (con->request->last == attr2)
+        con->request->last = prev2;
 
       _ipp_free_attr(attr2);
     }
@@ -5547,14 +5553,20 @@ set_job_attrs(client_t        *con,	/* I - Client connection */
       * Some other value; first free the old value...
       */
 
-      for (prev2 = job->attrs->attrs; prev2 != NULL; prev2 = prev2->next)
-	if (prev2->next == attr2)
-	  break;
-
-      if (prev2)
-	prev2->next = attr2->next;
+      if (con->request->attrs == attr2)
+	con->request->attrs = attr2->next;
       else
-	job->attrs->attrs = attr2->next;
+      {
+	for (prev2 = con->request->attrs; prev2 != NULL; prev2 = prev2->next)
+	  if (prev2->next == attr2)
+	  {
+	    prev2->next = attr2->next;
+	    break;
+	  }
+      }
+
+      if (con->request->last == attr2)
+        con->request->last = prev2;
 
       _ipp_free_attr(attr2);
 
@@ -5598,6 +5610,9 @@ set_job_attrs(client_t        *con,	/* I - Client connection */
 	  prev2->next = attr2->next;
 	else
 	  job->attrs->attrs = attr2->next;
+
+        if (attr2 == job->attrs->last)
+	  job->attrs->last = prev2;
 
         _ipp_free_attr(attr2);
       }
@@ -6029,5 +6044,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.29 2002/10/16 02:35:31 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.30 2002/11/21 21:46:58 mike Exp $".
  */
